--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: "Kavoon";
+    src: url("./assets/fonts/Kavoon/Kavoon-Regular.ttf");
+    font-weight: 400;
+    font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: "Kavoon", cursive;
+    background-color: theme("colors.indigo.400");
+    color:#fff;
+}
+
+.btn-play {
+    padding: 20px 40px 20px 40px;
+    border-radius: 40px;
+}
+
+@layer components {
+    .card {
+        background-color: theme("colors.indigo.500");
+        border-radius: theme("borderRadius.lg");
+        padding: theme("spacing.6");
+        box-shadow: theme("boxShadow.xl");
+        color: theme("colors.white");
+    }
+
+    .container-center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn {
+        background: theme("colors.indigo.500");
+        box-shadow: -8px -8px 26px rgba(255, 255, 255, 0.48),
+            18px 18px 26px rgba(0, 0, 0, 0.33),
+            inset 0px 4px 42px rgba(0, 0, 0, 0.06);
+        color: theme("colors.white");
+    }
+
+    .btn:hover {
+        background: theme("colors.indigo.600");
+    }
+
+    .btn:active {
+        box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
+            inset 6px 6px 12px rgba(0, 0, 0, 0.25);
+    }
 }
