--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -12,43 +12,69 @@
 body {
     font-family: "Kavoon", cursive;
     background-color: theme("colors.indigo.400");
-    color:#fff;
+    color: #fff;
+    height: 100vh;
 }
 
-.btn-play {
-    padding: 20px 40px 20px 40px;
-    border-radius: 40px;
+#root{
+    height: 100%;
 }
 
-@layer components {
-    .card {
-        background-color: theme("colors.indigo.500");
-        border-radius: theme("borderRadius.lg");
-        padding: theme("spacing.6");
-        box-shadow: theme("boxShadow.xl");
-        color: theme("colors.white");
-    }
+* {
+    text-shadow: 0 0 4px #000; /* horizontal-offset vertical-offset 'blur' colour */
+    -moz-text-shadow: 0 0 4px #000;
+    -webkit-text-shadow: 0 0 4px #000;
+}
 
-    .container-center {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.card {
+    background-color: theme("colors.indigo.500");
+    border-radius: theme("borderRadius.lg");
+    padding: theme("spacing.6");
+    box-shadow: theme("boxShadow.xl");
+    color: theme("colors.white");
+}
 
-    .btn {
-        background: theme("colors.indigo.500");
-        box-shadow: -8px -8px 26px rgba(255, 255, 255, 0.48),
-            18px 18px 26px rgba(0, 0, 0, 0.33),
-            inset 0px 4px 42px rgba(0, 0, 0, 0.06);
-        color: theme("colors.white");
-    }
+.container-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    .btn:hover {
-        background: theme("colors.indigo.600");
-    }
+.btn {
+    background: theme("colors.indigo.500");
+    box-shadow: -8px -8px 26px rgba(255, 255, 255, 0.48),
+        18px 18px 26px rgba(0, 0, 0, 0.33),
+        inset 0px 4px 42px rgba(0, 0, 0, 0.06);
+    color: theme("colors.white");
+    width: max-content;
+}
 
-    .btn:active {
-        box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
-            inset 6px 6px 12px rgba(0, 0, 0, 0.25);
+.btn:hover {
+    background: theme("colors.indigo.600");
+}
+
+.btn:active {
+    box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
+        inset 6px 6px 12px rgba(0, 0, 0, 0.25);
+}
+
+.container-convex{
+    box-shadow: -8px -8px 26px rgba(255, 255, 255, 0.48),
+        18px 18px 26px rgba(0, 0, 0, 0.33),
+        inset 0px 4px 42px rgba(0, 0, 0, 0.06);
+}
+
+.container-concave{
+    box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
+        inset 6px 6px 12px rgba(0, 0, 0, 0.25);
+}
+
+aside{
+    
+}
+
+@media screen and (min-width: 425px) {
+    .Main__containerWrapper {
+        flex-direction: row;
     }
 }
