--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -13,7 +13,6 @@ body {
     font-family: "Kavoon", cursive;
     background-color: theme("colors.indigo.400");
     color: #fff;
-    height: 100vh;
 }
 
 #root {
@@ -24,6 +23,42 @@ body {
     text-shadow: 0 0 4px #000; /* horizontal-offset vertical-offset 'blur' colour */
     -moz-text-shadow: 0 0 4px #000;
     -webkit-text-shadow: 0 0 4px #000;
+}
+
+progress {
+    border: 0;
+    height: 15px;
+    border-radius: 20px;
+}
+progress::-webkit-progress-bar {
+    border: 0;
+    border-radius: 20px;
+    background-color: rgb(158, 158, 158);
+}
+progress::-webkit-progress-value {
+    border: 0;
+    border-radius: 20px;
+    background-color: theme("colors.indigo.600");
+}
+progress::-moz-progress-bar {
+    border: 0;
+    border-radius: 20px;
+}
+
+h1{
+    font-size: 40px;
+}
+
+h2{
+    font-size: 35px;
+}
+
+h3{
+    font-size: 30px;
+}
+
+h4{
+    font-size: 25px;
 }
 
 .card {
@@ -59,10 +94,4 @@ body {
 .container-concave {
     box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
         inset 6px 6px 12px rgba(0, 0, 0, 0.25);
-}
-
-@media screen and (min-width: 425px) {
-    .Main__containerWrapper {
-        flex-direction: row;
-    }
 }
