--- a/react-client/src/components/common/petal_menu/menu.css
+++ b/react-client/src/components/common/petal_menu/menu.css
@@ -2,7 +2,7 @@
 
 }
 
-ul{
+.menu_list{
     width: 300px;
     height: 300px;
     padding: 0;
@@ -14,7 +14,7 @@ ul{
     overflow: hidden;
 }
 
-ul:after{
+.menu_list:after{
     content: "";
     border: 1px solid #d4d4d4;
     border-radius: 50%;
