--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -31,8 +31,8 @@ body {
 
 progress {
     border: 0;
-    height: 15px;
     border-radius: 20px;
+    overflow: hidden;
 }
 progress::-webkit-progress-bar {
     border: 0;
@@ -126,22 +126,19 @@ h4 {
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-/* SCROLL BAR */
-
 ::-webkit-scrollbar {
-    /* display: none; */
+    display: none;
     width: 0.6rem;
-    background-color: theme("colors.indigo.300");
+    background-color: theme("colors.indigo.200");
     border-radius: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: theme("colors.indigo.500");
     border-radius: 0.5rem;
-    
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: theme("colors.indigo.700");
+    background-color: theme("colors.indigo.600");
 }
 
 @keyframes roll {
