--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -21,6 +21,23 @@ body {
     height: 100%;
 }
 
+@layer utilities {
+    @variants responsive {
+        .text-shadow {
+          text-shadow: 2px 2px 4px black;
+        }
+        .text-shadow-md {
+          text-shadow: 4px 4px 8px black;
+        }
+        .text-shadow-lg {
+          text-shadow: 15px 15px 30px black;
+        }
+        .text-shadow-none {
+          text-shadow: none;
+        }
+    } 
+}
+
 * {
     text-shadow: 0 0 4px #000; /* horizontal-offset vertical-offset 'blur' colour */
     -moz-text-shadow: 0 0 4px #000;
