--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -11,14 +11,29 @@
 
 body {
     font-family: "Kavoon", cursive;
-    background-color: theme("colors.indigo.400");
-    color: #fff;
     position: relative;
     height: 100vh;
 }
 
 #root {
     height: 100%;
+    color: var(--text-color);
+    background-color: var(--bg-color-main);
+}
+
+.btn {
+    color:var(--text-color);
+    background-color: var(--bg-color-button);
+    /* width: max-content; */
+}
+
+.btn:hover {
+    background: var(--bg-color-button-hover);
+}
+
+.component{
+    color:var(--text-color);
+    background-color: var(--bg-color-component);
 }
 
 @layer utilities {
@@ -94,27 +109,6 @@ h4 {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.btn {
-    background: theme("colors.indigo.500");
-    width: max-content;
-}
-
-.btn:hover {
-    background: theme("colors.indigo.700");
-}
-
-.container-convex {
-    box-shadow: -8px -8px 26px rgba(255, 255, 255, 0.48),
-        18px 18px 26px rgba(0, 0, 0, 0.33),
-        inset 0px 4px 42px rgba(0, 0, 0, 0.06);
-}
-
-.btn:active,
-.container-concave {
-    box-shadow: inset -6px -6px 12px rgba(255, 255, 255, 0.25),
-        inset 6px 6px 12px rgba(0, 0, 0, 0.25);
 }
 
 .container-roll {
