--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -16,6 +16,41 @@ body {
     background-color: var(--bg-color-main);
 }
 
+.bg-indigo-400 {
+    background-color: rgb(129 140 248);
+}
+
+.bg-black {
+    background-color: rgb(0 0 0);
+}
+
+.bg-slate-300 {
+    background-color: rgb(203 213 225);
+}
+
+.bg-red-400 {
+    background-color: rgb(248 113 113);
+}
+
+.bg-amber-400 {
+    background-color: rgb(251 191 36);
+}
+
+.bg-sky-400 {
+    background-color: rgb(56 189 248);
+}
+.bg-emerald-400 {
+    background-color: rgb(52 211 153);
+}
+
+.bg-purple-400 {
+    background-color: rgb(192 132 252);
+}
+
+.bg-pink-400 {
+    background-color: rgb(244 114 182);
+}
+
 #root {
     height: 100%;
     color: var(--text-color);
