--- a/react-client/src/components/pages/login/style.css
+++ b/react-client/src/components/pages/login/style.css
@@ -45,7 +45,7 @@
 }
 
 .text-input:focus {
-    border: 2px solid theme("colors.indigo.600");
+    border: 2px solid var(--bg-color-button-hover);
 }
 
 .text-input:focus + label,
